[tool.poetry]
name = "proxy_source"
version = "0.0.1"
description = ""
authors = ["RuzzyRullezz <ruzzyrullezz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.1"
fastapi = "^0.68.1"
raven = "^6.10.0"
mypy = "^0.910"
psycopg2-binary = "^2.9.1"
flake8 = "^3.9.2"
telegram-log = "^1.0.12"
pydantic = "^1.8.2"
requests = "^2.26.0"
pendulum = "^2.1.2"
urllib3 = "1.25.11"
httpx = "^0.19.0"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
